# hyperspectral_processing

./: .gitignore  Makefile  data_distribution.py  datagen.py  eval_model_visually.py  image_processing.py  image_rotation.py  main.py  model.py  pyproject.toml  requirements.txt  visualiztion.py
hyptraining/datap/: data.py  processing.py
hyptraining/utils/: distributions.py  utils.py
model/: next.metadata
scripts/: README.md  interpolation.py  rbf_interpolation.py
