[tool.poetry]
name = "hyperspectral"
version = "0.1.0"
description = ""
authors = ["Luis Garcia <luisgarcia26284@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.8.4"
pandas = "^2.2.2"
torch = "^2.2.2"
tqdm = "^4.66.2"
opencv-python = "^4.9.0.80"
screeninfo = "^0.8.1"
pyarrow = "^16.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
